--- a/app/components/modal/modal.css
+++ b/app/components/modal/modal.css
@@ -385,13 +385,53 @@
   .head {
     width: 80px;
     height: 80px;
-    background: #eee;
+    background-color: #eee;
+    background-image: url("../../assets/img/icon-upload.png");
+    background-repeat: no-repeat;
+    background-position: center;
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+    a:hover:after{
+      content: "x";
+      width: 28px;
+      height: 28px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -14px;
+      margin-top: -14px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0,0,0,.3);
+      color: rgba(255,255,255,.5);
+      font-size: 20px;
+      line-height: 1;
+    }
+    input {
+      display: block;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+    }
   }
   .ipt-warpper {
     margin-top: 15px;
