--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -16,12 +16,12 @@
     font-weight: 900;
 }
 
-html, body {
+html {
     font-size: responsive;
     lower-font-range: $minWidth;
     upper-font-range: $maxWidth;
-    min-font-size: 0.875rem;
-    max-font-size: 1.125rem;
+    min-font-size: $minFontSize;
+    max-font-size: $maxFontSize;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: Calibre, "Helvetica Neue", Arial, sans-serif;
