--- a/app/components/header/header-has-search.html
+++ b/app/components/header/header-has-search.html
@@ -1,4 +1,4 @@
-<div class="nav-container fixed-top">
+<div class="nav-container fixed-top js_nav">
 	<nav class="nav-bar">
 		<div class="nav-bar__logo">
 			<a href="./index.html">
